--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,13 @@ dependencies:
 
   # Bloc
   bloc: ^8.1.2
+  
+  # Freezed
+  freezed: ^2.4.5
+  freezed_annotation: ^2.4.1
+
+  # Json
+  json_annotation: ^4.8.1
 
 dev_dependencies:
   flutter_test:
@@ -55,6 +62,7 @@ dev_dependencies:
   retrofit_generator: ^8.0.4
   floor_generator: ^1.4.2
   build_runner: ^2.4.6
+  json_serializable: ^6.7.1
 
 flutter:
 
