--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,9 @@ dependencies:
   # Json
   json_annotation: ^4.8.1
 
+  # Bot toast
+  bot_toast: ^4.1.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
