--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,15 @@ dependencies:
   # Bot toast
   bot_toast: ^4.1.3
 
+  # Assets generate
+  flutter_gen: ^5.3.2
+
+  # Screen util
+  flutter_screenutil: ^5.9.0
+
+  # Easy location
+  easy_localization: ^3.0.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -66,6 +75,7 @@ dev_dependencies:
   floor_generator: ^1.4.2
   build_runner: ^2.4.6
   json_serializable: ^6.7.1
+  flutter_gen_runner: ^5.3.2
 
 flutter:
 
