--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,7 @@ dependencies:
   bot_toast: ^4.1.3
 
   # Assets generate
-  flutter_gen: ^5.3.2
+  flutter_gen: ^5.4.0
 
   # Screen util
   flutter_screenutil: ^5.9.0
@@ -65,6 +65,7 @@ dev_dependencies:
 
   flutter_lints: ^2.0.0
   build_runner: ^2.4.6
+  flutter_gen_runner: ^5.4.0
 
 flutter:
 
