--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,10 @@ dev_dependencies:
   build_runner: ^2.4.6
   flutter_gen_runner: ^5.4.0
 
+flutter_gen:
+  integrations:
+    flutter_svg: true
+
 flutter:
 
   uses-material-design: true
