--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   flutter_hooks: ^0.20.3
 
   # Cached image
-  cached_network_image: ^3.3.0
+  cached_network_image: ^3.3.1
 
   # Dio
   dio: ^5.3.3
@@ -64,6 +64,9 @@ dependencies:
 
   # Slider
   carousel_slider: ^4.2.1
+
+  # Smart grid view
+  flutter_staggered_grid_view: ^0.7.0
 
 dev_dependencies:
   flutter_test:
